--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -117,6 +117,11 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    background-image: url('/assets/bg.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    
   }
 }
